fix overflow

--- a/style.css
+++ b/style.css
@@ -651,6 +651,7 @@ footer p{
         width: 94%;
         place-items: center;
         gap: 0;
+        overflow-y: scroll;
     }
     .projekt-photo{
         margin: 0 auto;
